--- a/package.json
+++ b/package.json
@@ -27,18 +27,20 @@
     "typesafe-actions": "^5.1.0"
   },
   "devDependencies": {
+    "@teamsupercell/typings-for-css-modules-loader": "^2.4.0",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
     "@webpack-cli/serve": "^1.1.0",
     "awesome-typescript-loader": "^5.2.1",
-    "css-loader": "^5.0.1",
+    "css-loader": "1.0.1",
     "html-webpack-plugin": "^4.5.0",
     "node-sass": "^5.0.0",
     "sass-loader": "^10.1.0",
     "style-loader": "^2.0.0",
     "typescript": "^4.1.3",
-    "webpack": "^5.11.0",
+    "typings-for-css-modules-loader": "^1.7.0",
+    "webpack": "^5.15.0",
     "webpack-cli": "^4.2.0",
-    "webpack-dev-server": "^3.11.0"
+    "webpack-dev-server": "^3.11.2"
   }
 }
